@@ -26,6 +26,7 @@ t/context.t
 t/context_lexical.t
 t/crickey.t
 t/exceptions.t
+t/exec.t
 t/Fatal.t
 t/filehandles.t
 t/fileno.t
