@@ -32,6 +32,9 @@ Revision history for Fatal
 
         * FEATURE: Added support for fileno.
 
+        * FEATURE: Addded support for exec (although this
+          breaks the exotic form while autodie is in scope).
+
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
         * RELEASE CODENAME: "Aristotle", in thanks for the many
